Spacing fixes

--- a/app/static/sass/partials/_class_dropdown.scss
+++ b/app/static/sass/partials/_class_dropdown.scss
@@ -5,6 +5,10 @@
   font-size: 2em;
 }
 
+#class_drop {
+  margin-bottom: 7.41vh;
+}
+
 .dropdown-content {
   color: $primaryCol !important;
   li {
